engine/tests/detection_corpus/bad/exec_import.py
module = __import__(module_name)
